--- a/LimeStudio/app/src/main/res/drawable/keyboard_key_preview_background_fashion_purple.xml
+++ b/LimeStudio/app/src/main/res/drawable/keyboard_key_preview_background_fashion_purple.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ /*
   ~  *
@@ -24,9 +25,5 @@
   -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true"
-        android:drawable="@drawable/sym_flat_keyboard_up_white" />
-    <item
-        android:drawable="@drawable/sym_flat_keyboard_up_white" />
-
+    <item   android:drawable="@drawable/btn_flat_keyboard_key_preview_fashion_purple" />
 </selector>
