--- a/LimeStudio/app/src/main/res/values-zh-rCN/strings_settings.xml
+++ b/LimeStudio/app/src/main/res/values-zh-rCN/strings_settings.xml
@@ -674,6 +674,7 @@
             <item>深色</item>
             <item>粉紅</item>
             <item>科技蓝</item>
+            <item>时尚紫</item>
         </string-array>
 
 
@@ -682,6 +683,7 @@
             <item>1</item>
             <item>2</item>
             <item>3</item>
+            <item>4</item>
         </string-array>
 
 
