--- a/LimeStudio/app/src/main/res/drawable/btn_flat_keyboard_key_preview_fashion_purple.xml
+++ b/LimeStudio/app/src/main/res/drawable/btn_flat_keyboard_key_preview_fashion_purple.xml
@@ -23,10 +23,28 @@
   ~  */
   -->
 
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true"
-        android:drawable="@drawable/sym_flat_keyboard_up_white" />
-    <item
-        android:drawable="@drawable/sym_flat_keyboard_up_white" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle" >
+    <corners
+        android:radius="3dp"
+        />
+    <solid
+        android:color="@color/second_background_fashion_purple"
+        />
+    <padding
+        android:left="1dp"
+        android:top="1dp"
+        android:right="1dp"
+        android:bottom="1dp"
+        />
+    <size
+        android:width="50dp"
+        android:height="80dp"
+        />
 
-</selector>
+    <stroke
+        android:width="2dp"
+        android:color="@color/keyboard_background_fashion_purple"
+        />
+
+</shape>
