--- a/LimeStudio/app/src/main/res/drawable/btn_voice_fashion_purple.xml
+++ b/LimeStudio/app/src/main/res/drawable/btn_voice_fashion_purple.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ /*
   ~  *
-  ~  **    Copyright 2015, The LimeIME Open Source Project
+  ~  **    Copyright 2016, The LimeIME Open Source Project
   ~  **
   ~  **    Project Url: http://github.com/lime-ime/limeime/
   ~  **                 http://android.toload.net/
@@ -22,11 +23,8 @@
   ~  *
   ~  */
   -->
-
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true"
-        android:drawable="@drawable/sym_flat_keyboard_up_white" />
-    <item
-        android:drawable="@drawable/sym_flat_keyboard_up_white" />
-
+    <item android:state_pressed="false" android:state_focused="false" android:drawable="@drawable/sym_keyboard_voice_fashion_purple"/>
+    <item android:state_pressed="true" android:drawable="@drawable/sym_keyboard_voice_fashion_purple_hl"/>
+    <item android:state_focused="true" android:drawable="@drawable/sym_keyboard_voice_fashion_purple_hl"/>
 </selector>
