--- a/LimeStudio/app/src/main/res/drawable/sym_keyboard_shift_fashion_purple.xml
+++ b/LimeStudio/app/src/main/res/drawable/sym_keyboard_shift_fashion_purple.xml
@@ -24,9 +24,12 @@
   -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true"
-        android:drawable="@drawable/sym_flat_keyboard_up_white" />
-    <item
-        android:drawable="@drawable/sym_flat_keyboard_up_white" />
-
+    <item android:state_checkable="true" android:state_checked="true" android:state_pressed="true"
+        android:drawable="@drawable/sym_flat_keyboard_shift_normal_unlocked_white" />
+    <item android:state_checkable="true" android:state_checked="true"
+        android:drawable="@drawable/sym_flat_keyboard_shift_locked_fashion_purple" />
+    <item android:state_checkable="true" android:state_pressed="true"
+        android:drawable="@drawable/sym_flat_keyboard_shift_locked_fashion_purple" />
+    <item android:state_checkable="true"
+        android:drawable="@drawable/sym_flat_keyboard_shift_normal_unlocked_white" />
 </selector>
