--- a/LimeStudio/app/src/main/res/layout/key_preview_fashion_purple.xml
+++ b/LimeStudio/app/src/main/res/layout/key_preview_fashion_purple.xml
@@ -23,10 +23,13 @@
   ~  */
   -->
 
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true"
-        android:drawable="@drawable/sym_flat_keyboard_up_white" />
-    <item
-        android:drawable="@drawable/sym_flat_keyboard_up_white" />
-
-</selector>
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="120sp"
+    android:textSize="40sp"
+    android:textColor="@color/color_white"
+    android:minWidth="32dip"
+    android:gravity="center|top"
+    android:background="@drawable/btn_flat_keyboard_key_preview_fashion_purple"
+    android:text="W"
+    />
