--- a/LimeStudio/app/src/main/res/values/strings_settings.xml
+++ b/LimeStudio/app/src/main/res/values/strings_settings.xml
@@ -668,6 +668,7 @@
         <item>深色</item>
         <item>粉紅</item>
         <item>科技藍</item>
+        <item>時尚紫</item>
     </string-array>
 
 
@@ -676,6 +677,7 @@
         <item>1</item>
         <item>2</item>
         <item>3</item>
+        <item>4</item>
     </string-array>
 
 
