--- a/LimeStudio/app/src/main/res/values/styles.xml
+++ b/LimeStudio/app/src/main/res/values/styles.xml
@@ -54,7 +54,7 @@
     </style>
     <style name="LIMEKeyboard.Dark" parent = "LIMEKeyboard">
         <item name="spaceKeyIcon">@drawable/sym_keyboard_space_dark</item>
-        <item name="spaceKeyPreviewIcon">@drawable/sym_flat_keyboard_space_dark</item>
+        <item name="spaceKeyPreviewIcon">@drawable/sym_flat_keyboard_space_white</item>
         <item name="enterKeyIcon">@drawable/sym_keyboard_return_dark</item>
         <item name="searchKeyIcon">@drawable/sym_keyboard_search_dark</item>
         <item name ="doneKeyIcon">@drawable/sym_keyboard_done_dark</item>
@@ -68,7 +68,7 @@
 
     <style name="LIMEKeyboard.Pink" parent = "LIMEKeyboard">
         <item name="spaceKeyIcon">@drawable/sym_keyboard_space_white</item>
-        <item name="spaceKeyPreviewIcon">@drawable/sym_flat_keyboard_space_dark</item>
+        <item name="spaceKeyPreviewIcon">@drawable/sym_flat_keyboard_space_white</item>
         <item name="enterKeyIcon">@drawable/sym_keyboard_return_white</item>
         <item name="searchKeyIcon">@drawable/sym_keyboard_search_white</item>
         <item name ="doneKeyIcon">@drawable/sym_keyboard_done_white</item>
@@ -81,13 +81,27 @@
     </style>
     <style name="LIMEKeyboard.TechBlue" parent = "LIMEKeyboard">
         <item name="spaceKeyIcon">@drawable/sym_keyboard_space_white</item>
-        <item name="spaceKeyPreviewIcon">@drawable/sym_flat_keyboard_space_dark</item>
+        <item name="spaceKeyPreviewIcon">@drawable/sym_flat_keyboard_space_white</item>
         <item name="enterKeyIcon">@drawable/sym_keyboard_return_white</item>
         <item name="searchKeyIcon">@drawable/sym_keyboard_search_white</item>
         <item name ="doneKeyIcon">@drawable/sym_keyboard_done_white</item>
         <item name ="deleteKeyIcon">@drawable/sym_keyboard_delete_white</item>
         <item name ="shiftKeyIcon">@drawable/sym_keyboard_shift_tech_blue</item>
         <item name ="shiftKeyShiftedIcon">@drawable/sym_keyboard_shift_shifted_tech_blue</item>
+        <item name="spaceKeyTextColor">@color/color_white</item>
+        <item name="spaceKeySlidingLeftArrow">@drawable/sym_keyboard_previous_white</item>
+        <item name="spaceKeySlidingRightArrow">@drawable/sym_keyboard_next_white</item>
+    </style>
+
+    <style name="LIMEKeyboard.FashionPurple" parent = "LIMEKeyboard">
+        <item name="spaceKeyIcon">@drawable/sym_keyboard_space_white</item>
+        <item name="spaceKeyPreviewIcon">@drawable/sym_flat_keyboard_space_white</item>
+        <item name="enterKeyIcon">@drawable/sym_keyboard_return_white</item>
+        <item name="searchKeyIcon">@drawable/sym_keyboard_search_white</item>
+        <item name ="doneKeyIcon">@drawable/sym_keyboard_done_white</item>
+        <item name ="deleteKeyIcon">@drawable/sym_keyboard_delete_white</item>
+        <item name ="shiftKeyIcon">@drawable/sym_keyboard_shift_fashion_purple</item>
+        <item name ="shiftKeyShiftedIcon">@drawable/sym_keyboard_shift_shifted_fashion_purple</item>
         <item name="spaceKeyTextColor">@color/color_white</item>
         <item name="spaceKeySlidingLeftArrow">@drawable/sym_keyboard_previous_white</item>
         <item name="spaceKeySlidingRightArrow">@drawable/sym_keyboard_next_white</item>
@@ -113,6 +127,11 @@
         <item name="android:background">@drawable/keyboard_background_tech_blue</item>
         <item name="android:keyBackground">@drawable/btn_keyboard_key_tech_blue</item>
     </style>
+    <style name="LIMEKeyboardLayout.FashionPurple" parent = "LIMEKeyboardLayout">
+        <item name="android:background">@drawable/keyboard_background_fashion_purple</item>
+        <item name="android:keyBackground">@drawable/btn_keyboard_key_fashion_purple</item>
+    </style>
+
 
     <style name="LIMEPopupKeyboardLayout">
         <item name="android:background">@drawable/keyboard_popup_panel_background_light</item>
@@ -133,6 +152,10 @@
     <style name="LIMEPopupKeyboardLayout.TechBlue" parent = "LIMEPopupKeyboardLayout">
         <item name="android:background">@drawable/keyboard_popup_panel_background_tech_blue</item>
         <item name="android:keyBackground">@drawable/btn_keyboard_key_tech_blue</item>
+    </style>
+    <style name="LIMEPopupKeyboardLayout.FashionPurple" parent = "LIMEPopupKeyboardLayout">
+        <item name="android:background">@drawable/keyboard_popup_panel_background_fashion_purple</item>
+        <item name="android:keyBackground">@drawable/btn_keyboard_key_fashion_purple</item>
     </style>
 
     <style name="LIMEKeyboardBaseView">
@@ -182,36 +205,6 @@
         <item name="keySubLabelTextColorPressed">@color/color_common_light_green_hl</item>
 
     </style>
-    <style name="LIMEKeyboardBaseView.Pink" parent = "LIMEKeyboardBaseView">
-        <item name="keyPreviewLayout">@layout/key_preview_pink</item>
-        <item name="keyBackground">@drawable/btn_keyboard_key_pink</item>
-        <item name="popupHint">@drawable/hint_popup_dark</item>
-
-        <item name="keyTextColorNormal">@color/color_white</item>
-        <item name="keyTextColorPressed">@color/pink_hl</item>
-
-        <item name="functionKeyTextColorNormal">@color/color_white</item>
-        <item name="functionKeyTextColorPressed">@color/pink_hl</item>
-
-        <item name="keySubLabelTextColorNormal">@color/pink_hl</item>
-        <item name="keySubLabelTextColorPressed">@color/color_white</item>
-
-    </style>
-    <style name="LIMEKeyboardBaseView.TechBlue" parent = "LIMEKeyboardBaseView">
-        <item name="keyPreviewLayout">@layout/key_preview_tech_blue</item>
-        <item name="keyBackground">@drawable/btn_keyboard_key_tech_blue</item>
-        <item name="popupHint">@drawable/hint_popup_dark</item>
-
-        <item name="keyTextColorNormal">@color/foreground_tech_blue</item>
-        <item name="keyTextColorPressed">@color/tech_blue_hl</item>
-
-        <item name="functionKeyTextColorNormal">@color/color_white</item>
-        <item name="functionKeyTextColorPressed">@color/tech_blue_hl</item>
-
-        <item name="keySubLabelTextColorNormal">@color/color_white</item>
-        <item name="keySubLabelTextColorPressed">@color/tech_blue_hl</item>
-
-    </style>
 
     <style name="LIMEKeyboardBaseView.Dark" parent = "LIMEKeyboardBaseView">
         <item name="keyPreviewLayout">@layout/key_preview_dark</item>
@@ -228,10 +221,51 @@
         <item name="keySubLabelTextColorPressed">@color/color_common_light_green_hl</item>
     </style>
 
-    <style name="KeyPreviewAnimation">
-        <item name="android:windowEnterAnimation">@anim/key_preview_fadein</item>
-        <item name="android:windowExitAnimation">@anim/key_preview_fadeout</item>
+    <style name="LIMEKeyboardBaseView.Pink" parent = "LIMEKeyboardBaseView">
+        <item name="keyPreviewLayout">@layout/key_preview_pink</item>
+        <item name="keyBackground">@drawable/btn_keyboard_key_pink</item>
+        <item name="popupHint">@drawable/hint_popup_dark</item>
+
+        <item name="keyTextColorNormal">@color/color_white</item>
+        <item name="keyTextColorPressed">@color/pink_hl</item>
+
+        <item name="functionKeyTextColorNormal">@color/color_white</item>
+        <item name="functionKeyTextColorPressed">@color/pink_hl</item>
+
+        <item name="keySubLabelTextColorNormal">@color/pink_hl</item>
+        <item name="keySubLabelTextColorPressed">@color/color_white</item>
     </style>
+
+    <style name="LIMEKeyboardBaseView.TechBlue" parent = "LIMEKeyboardBaseView">
+        <item name="keyPreviewLayout">@layout/key_preview_tech_blue</item>
+        <item name="keyBackground">@drawable/btn_keyboard_key_tech_blue</item>
+        <item name="popupHint">@drawable/hint_popup_dark</item>
+
+        <item name="keyTextColorNormal">@color/foreground_tech_blue</item>
+        <item name="keyTextColorPressed">@color/tech_blue_hl</item>
+
+        <item name="functionKeyTextColorNormal">@color/color_white</item>
+        <item name="functionKeyTextColorPressed">@color/tech_blue_hl</item>
+
+        <item name="keySubLabelTextColorNormal">@color/color_white</item>
+        <item name="keySubLabelTextColorPressed">@color/tech_blue_hl</item>
+    </style>
+
+    <style name="LIMEKeyboardBaseView.FashionPurple" parent = "LIMEKeyboardBaseView">
+        <item name="keyPreviewLayout">@layout/key_preview_fashion_purple</item>
+        <item name="keyBackground">@drawable/btn_keyboard_key_fashion_purple</item>
+        <item name="popupHint">@drawable/hint_popup_dark</item>
+
+        <item name="keyTextColorNormal">@color/foreground_fashion_purple</item>
+        <item name="keyTextColorPressed">@color/color_white</item>
+
+        <item name="functionKeyTextColorNormal">@color/color_white</item>
+        <item name="functionKeyTextColorPressed">@color/color_white</item>
+
+        <item name="keySubLabelTextColorNormal">@color/color_white</item>
+        <item name="keySubLabelTextColorPressed">@color/color_white</item>
+    </style>
+
     <style name="MiniKeyboardAnimation">
         <item name="android:windowEnterAnimation">@anim/mini_keyboard_fadein</item>
         <item name="android:windowExitAnimation">@anim/mini_keyboard_fadeout</item>
@@ -263,7 +297,15 @@
         <item name="drawableArrowRight">@drawable/sym_keyboard_right_white</item>
         <item name="drawableArrowLeft">@drawable/sym_keyboard_left_white</item>
     </style>
+
     <style name="LIMEBaseKeyboard.TechBlue" parent = "LIMEBaseKeyboard">
+        <item name="drawableArrowUp">@drawable/sym_keyboard_up_white</item>
+        <item name="drawableArrowDown">@drawable/sym_keyboard_down_white</item>
+        <item name="drawableArrowRight">@drawable/sym_keyboard_right_white</item>
+        <item name="drawableArrowLeft">@drawable/sym_keyboard_left_white</item>
+    </style>
+
+    <style name="LIMEBaseKeyboard.FashionPurple" parent = "LIMEBaseKeyboard">
         <item name="drawableArrowUp">@drawable/sym_keyboard_up_white</item>
         <item name="drawableArrowDown">@drawable/sym_keyboard_down_white</item>
         <item name="drawableArrowRight">@drawable/sym_keyboard_right_white</item>
@@ -371,6 +413,25 @@
         <item name="composingBackgroundColor">@color/composing_background_tech_blue</item>
     </style>
 
+    <style name="LIMECandidateView.FashionPurple"  parent = "LIMECandidateView">
+        <item name="suggestHighlight">@drawable/ic_suggest_scroll_background_fashion_purple</item>
+        <item name="voiceInputIcon">@drawable/btn_voice_fashion_purple</item>
+        <item name="candidateBackground">@color/candidate_background_fashion_purple</item>
+        <item name="ExpandButtonIcon">@drawable/btn_expand_fashion_purple</item>
+        <!-- color of  different types of candidates   -->
+        <item name="candidateNormalTextColor">@color/color_black</item>
+        <item name="candidateNormalTextHighlightColor">@color/color_white</item>
+        <item name="composingCodeColor">@color/second_background_fashion_purple</item>
+        <item name="composingCodeHighlightColor">@color/color_white</item>
+        <!-- color of  spacer between candidate   -->
+        <item name="spacerColor">@color/second_background_fashion_purple</item>
+        <!-- color of  selection key display for physical keyboard   -->
+        <item name="selKeyColor">@color/color_black</item>
+        <item name="selKeyShiftedColor">@color/fashion_purple_hl</item>
+        <!-- color of  composing text view above candidate view   -->
+        <item name="composingTextColor">@color/fashion_purple_hl</item>
+        <item name="composingBackgroundColor">@color/composing_background_fashion_purple</item>
+    </style>
 
     <style name="Theme.AppCompat.Transparent" parent="@style/Theme.AppCompat.Light">
         <item name="android:windowNoTitle">true</item>
