--- a/LimeStudio/app/src/main/res/values/strings_settings.xml
+++ b/LimeStudio/app/src/main/res/values/strings_settings.xml
@@ -669,6 +669,7 @@
         <item>粉紅</item>
         <item>科技藍</item>
         <item>時尚紫</item>
+        <item>放鬆綠</item>
     </string-array>
 
 
@@ -678,6 +679,7 @@
         <item>2</item>
         <item>3</item>
         <item>4</item>
+        <item>5</item>
     </string-array>
 
 
