--- a/LimeStudio/app/src/main/res/values/styles.xml
+++ b/LimeStudio/app/src/main/res/values/styles.xml
@@ -79,6 +79,7 @@
         <item name="spaceKeySlidingLeftArrow">@drawable/sym_keyboard_previous_white</item>
         <item name="spaceKeySlidingRightArrow">@drawable/sym_keyboard_next_white</item>
     </style>
+
     <style name="LIMEKeyboard.TechBlue" parent = "LIMEKeyboard">
         <item name="spaceKeyIcon">@drawable/sym_keyboard_space_white</item>
         <item name="spaceKeyPreviewIcon">@drawable/sym_flat_keyboard_space_white</item>
@@ -102,6 +103,21 @@
         <item name ="deleteKeyIcon">@drawable/sym_keyboard_delete_white</item>
         <item name ="shiftKeyIcon">@drawable/sym_keyboard_shift_fashion_purple</item>
         <item name ="shiftKeyShiftedIcon">@drawable/sym_keyboard_shift_shifted_fashion_purple</item>
+        <item name="spaceKeyTextColor">@color/color_white</item>
+        <item name="spaceKeySlidingLeftArrow">@drawable/sym_keyboard_previous_white</item>
+        <item name="spaceKeySlidingRightArrow">@drawable/sym_keyboard_next_white</item>
+    </style>
+
+
+    <style name="LIMEKeyboard.RelaxGreen" parent = "LIMEKeyboard">
+        <item name="spaceKeyIcon">@drawable/sym_keyboard_space_white</item>
+        <item name="spaceKeyPreviewIcon">@drawable/sym_flat_keyboard_space_white</item>
+        <item name="enterKeyIcon">@drawable/sym_keyboard_return_white</item>
+        <item name="searchKeyIcon">@drawable/sym_keyboard_search_white</item>
+        <item name ="doneKeyIcon">@drawable/sym_keyboard_done_white</item>
+        <item name ="deleteKeyIcon">@drawable/sym_keyboard_delete_white</item>
+        <item name ="shiftKeyIcon">@drawable/sym_keyboard_shift_relax_green</item>
+        <item name ="shiftKeyShiftedIcon">@drawable/sym_keyboard_shift_shifted_relax_green</item>
         <item name="spaceKeyTextColor">@color/color_white</item>
         <item name="spaceKeySlidingLeftArrow">@drawable/sym_keyboard_previous_white</item>
         <item name="spaceKeySlidingRightArrow">@drawable/sym_keyboard_next_white</item>
@@ -131,7 +147,10 @@
         <item name="android:background">@drawable/keyboard_background_fashion_purple</item>
         <item name="android:keyBackground">@drawable/btn_keyboard_key_fashion_purple</item>
     </style>
-
+    <style name="LIMEKeyboardLayout.RelaxGreen" parent = "LIMEKeyboardLayout">
+        <item name="android:background">@drawable/keyboard_background_relax_green</item>
+        <item name="android:keyBackground">@drawable/btn_keyboard_key_relax_green</item>
+    </style>
 
     <style name="LIMEPopupKeyboardLayout">
         <item name="android:background">@drawable/keyboard_popup_panel_background_light</item>
@@ -156,6 +175,10 @@
     <style name="LIMEPopupKeyboardLayout.FashionPurple" parent = "LIMEPopupKeyboardLayout">
         <item name="android:background">@drawable/keyboard_popup_panel_background_fashion_purple</item>
         <item name="android:keyBackground">@drawable/btn_keyboard_key_fashion_purple</item>
+    </style>
+    <style name="LIMEPopupKeyboardLayout.RelaxGreen" parent = "LIMEPopupKeyboardLayout">
+        <item name="android:background">@drawable/keyboard_popup_panel_background_relax_green</item>
+        <item name="android:keyBackground">@drawable/btn_keyboard_key_relax_green</item>
     </style>
 
     <style name="LIMEKeyboardBaseView">
@@ -266,6 +289,21 @@
         <item name="keySubLabelTextColorPressed">@color/color_white</item>
     </style>
 
+    <style name="LIMEKeyboardBaseView.RelaxGreen" parent = "LIMEKeyboardBaseView">
+        <item name="keyPreviewLayout">@layout/key_preview_relax_green</item>
+        <item name="keyBackground">@drawable/btn_keyboard_key_relax_green</item>
+        <item name="popupHint">@drawable/hint_popup_dark</item>
+
+        <item name="keyTextColorNormal">@color/foreground_relax_green</item>
+        <item name="keyTextColorPressed">@color/color_white</item>
+
+        <item name="functionKeyTextColorNormal">@color/color_white</item>
+        <item name="functionKeyTextColorPressed">@color/color_white</item>
+
+        <item name="keySubLabelTextColorNormal">@color/color_white</item>
+        <item name="keySubLabelTextColorPressed">@color/color_white</item>
+    </style>
+
     <style name="MiniKeyboardAnimation">
         <item name="android:windowEnterAnimation">@anim/mini_keyboard_fadein</item>
         <item name="android:windowExitAnimation">@anim/mini_keyboard_fadeout</item>
@@ -306,6 +344,13 @@
     </style>
 
     <style name="LIMEBaseKeyboard.FashionPurple" parent = "LIMEBaseKeyboard">
+        <item name="drawableArrowUp">@drawable/sym_keyboard_up_white</item>
+        <item name="drawableArrowDown">@drawable/sym_keyboard_down_white</item>
+        <item name="drawableArrowRight">@drawable/sym_keyboard_right_white</item>
+        <item name="drawableArrowLeft">@drawable/sym_keyboard_left_white</item>
+    </style>
+
+    <style name="LIMEBaseKeyboard.RelaxGreen" parent = "LIMEBaseKeyboard">
         <item name="drawableArrowUp">@drawable/sym_keyboard_up_white</item>
         <item name="drawableArrowDown">@drawable/sym_keyboard_down_white</item>
         <item name="drawableArrowRight">@drawable/sym_keyboard_right_white</item>
@@ -411,6 +456,26 @@
         <!-- color of  composing text view above candidate view   -->
         <item name="composingTextColor">@color/tech_blue_hl</item>
         <item name="composingBackgroundColor">@color/composing_background_tech_blue</item>
+    </style>
+
+    <style name="LIMECandidateView.RelaxGreen"  parent = "LIMECandidateView">
+        <item name="suggestHighlight">@drawable/ic_suggest_scroll_background_relax_green</item>
+        <item name="voiceInputIcon">@drawable/btn_voice_relax_green</item>
+        <item name="candidateBackground">@color/candidate_background_relax_green</item>
+        <item name="ExpandButtonIcon">@drawable/btn_expand_relax_green</item>
+        <!-- color of  different types of candidates   -->
+        <item name="candidateNormalTextColor">@color/color_black</item>
+        <item name="candidateNormalTextHighlightColor">@color/color_white</item>
+        <item name="composingCodeColor">@color/second_background_relax_green_hl</item>
+        <item name="composingCodeHighlightColor">@color/color_white</item>
+        <!-- color of  spacer between candidate   -->
+        <item name="spacerColor">@color/foreground_relax_green</item>
+        <!-- color of  selection key display for physical keyboard   -->
+        <item name="selKeyColor">@color/color_black</item>
+        <item name="selKeyShiftedColor">@color/second_background_relax_green_hl</item>
+        <!-- color of  composing text view above candidate view   -->
+        <item name="composingTextColor">@color/relax_green_hl</item>
+        <item name="composingBackgroundColor">@color/composing_background_relax_green</item>
     </style>
 
     <style name="LIMECandidateView.FashionPurple"  parent = "LIMECandidateView">
