--- a/LimeStudio/app/src/main/res/values/themes.xml
+++ b/LimeStudio/app/src/main/res/values/themes.xml
@@ -69,4 +69,12 @@
     <item name="LIMEPopupKeyboardLayout">@style/LIMEPopupKeyboardLayout.FashionPurple</item>
     <item name="LIMECandidateView">@style/LIMECandidateView.FashionPurple</item>
   </style>
+  <style name="LIMETheme.RelaxGreen">
+    <item name="LIMEKeyboardStyle">@style/LIMEKeyboard.RelaxGreen</item>
+    <item name="LIMEBaseKeyboardStyle">@style/LIMEBaseKeyboard.RelaxGreen</item>
+    <item name="LIMEKeyboardBaseView">@style/LIMEKeyboardBaseView.RelaxGreen</item>
+    <item name="LIMEKeyboardLayout">@style/LIMEKeyboardLayout.RelaxGreen</item>
+    <item name="LIMEPopupKeyboardLayout">@style/LIMEPopupKeyboardLayout.RelaxGreen</item>
+    <item name="LIMECandidateView">@style/LIMECandidateView.RelaxGreen</item>
+  </style>
 </resources>
