--- a/LimeStudio/app/src/main/res/xml/preference.xml
+++ b/LimeStudio/app/src/main/res/xml/preference.xml
@@ -49,7 +49,7 @@
                  android:dialogTitle="@string/keyboard_list" />-->
 
         <CheckBoxPreference
-            android:defaultValue="true"
+            android:defaultValue="false"
             android:key="enable_emoji"
             android:summary="@string/enable_emoji_summary"
             android:title="@string/enable_emoji" />
