--- a/LimeStudio/app/src/main/res/xml/symbols2.xml
+++ b/LimeStudio/app/src/main/res/xml/symbols2.xml
@@ -31,7 +31,7 @@
     limehd:keyHeight="@dimen/key_height"
     >
 
-    <Row>
+    <!--Row>
         <Key limehd:codes="49" limehd:keyLabel="1" limehd:keyEdgeFlags="left"/>
         <Key limehd:codes="50" limehd:keyLabel="2"/>
         <Key limehd:codes="51" limehd:keyLabel="3"/>
@@ -42,51 +42,62 @@
         <Key limehd:codes="56" limehd:keyLabel="8"/>
         <Key limehd:codes="57" limehd:keyLabel="9"/>
         <Key limehd:codes="48" limehd:keyLabel="0" limehd:keyEdgeFlags="right"/>
+    </Row-->
+
+    <Row>
+        <Key limehd:codes="126" limehd:keyLabel="~" limehd:keyEdgeFlags="left"/>
+        <Key limehd:codes="177" limehd:keyLabel="±"/>
+        <Key limehd:codes="215" limehd:keyLabel="×"/>
+        <Key limehd:codes="247" limehd:keyLabel="÷"/>
+        <Key limehd:codes="8226" limehd:keyLabel="•"/>
+        <Key limehd:codes="176" limehd:keyLabel="°"/>
+        <Key limehd:codes="96" limehd:keyLabel="`"/>
+        <Key limehd:codes="180" limehd:keyLabel="´"/>
+        <Key limehd:codes="123" limehd:keyLabel="{"/>
+        <Key limehd:codes="125" limehd:keyLabel="}" limehd:keyEdgeFlags="right"/>
     </Row>
     
     <Row>
-        <Key limehd:codes="64" limehd:keyLabel="\@" limehd:keyEdgeFlags="left"/>
-        <Key limehd:codes="35" limehd:keyLabel="\#"/>
-        <Key limehd:codes="36" limehd:keyLabel="$"/>
-        <Key limehd:codes="37" limehd:keyLabel="%"/>
-        <Key limehd:codes="38" limehd:keyLabel="&amp;"/>
-        <Key limehd:codes="42" limehd:keyLabel="*"/>
-        <Key limehd:codes="45" limehd:keyLabel="-"/>
-        <Key limehd:codes="43" limehd:keyLabel="+"/>
-        <Key limehd:codes="40" limehd:keyLabel="("/>
-        <Key limehd:codes="41" limehd:keyLabel=")" limehd:keyEdgeFlags="right"/>
+        <Key limehd:codes="169" limehd:keyLabel="©" limehd:keyEdgeFlags="left"/>
+        <Key limehd:codes="163" limehd:keyLabel="£"/>
+        <Key limehd:codes="8364" limehd:keyLabel="€"/>
+        <Key limehd:codes="94" limehd:keyLabel="^"/>
+        <Key limehd:codes="174" limehd:keyLabel="®"/>
+        <Key limehd:codes="165" limehd:keyLabel="¥"/>
+        <Key limehd:codes="95" limehd:keyLabel="_"/>
+        <Key limehd:codes="61" limehd:keyLabel="="/>
+        <Key limehd:codes="91" limehd:keyLabel="["/>
+        <Key limehd:codes="93" limehd:keyLabel="]" limehd:keyEdgeFlags="right"/>
     </Row>
     
     <Row>
-        <Key limehd:codes="-1" limehd:keyIcon="@drawable/sym_keyboard_shift"
+        <Key limehd:codes="-15" limehd:keyLabel="2/3"
                 limehd:keyWidth="15%p" limehd:isModifier="true"
-                limehd:isSticky="true" limehd:keyEdgeFlags="left"/>
-        <Key limehd:codes="33" limehd:keyLabel="!" />
-        <Key limehd:codes="34" limehd:keyLabel="&quot;"/>
-        <Key limehd:codes="39" limehd:keyLabel="\'"/>
-        <Key limehd:codes="58" limehd:keyLabel=":"/>
-        <Key limehd:codes="59" limehd:keyLabel=";"/>
-        <Key limehd:codes="47" limehd:keyLabel="/" />
-        <Key limehd:codes="63" limehd:keyLabel="\?"/>
+                limehd:keyEdgeFlags="left"/>
+        <Key limehd:codes="161" limehd:keyLabel="¡" />
+        <Key limehd:codes="60" limehd:keyLabel="&lt;"/>
+        <Key limehd:codes="62" limehd:keyLabel="&gt;"/>
+        <Key limehd:codes="162" limehd:keyLabel="¢"/>
+        <Key limehd:codes="124" limehd:keyLabel="|"/>
+        <Key limehd:codes="92" limehd:keyLabel="\\" />
+        <Key limehd:codes="191" limehd:keyLabel="¿"/>
         <Key limehd:codes="-5" limehd:keyIcon="@drawable/sym_keyboard_delete_light" limehd:isModifier="true"
                 limehd:keyWidth="15%p" limehd:keyEdgeFlags="right"
                 limehd:isRepeatable="true"/>
     </Row>
     
-    <Row  limehd:rowEdgeFlags="bottom">
+    <Row limehd:rowEdgeFlags="bottom">
         <Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done_light" limehd:isModifier="true"
                 limehd:keyWidth="15%p" limehd:keyEdgeFlags="left" />
-        <Key limehd:codes="-2" limehd:isModifier="true" limehd:keyLabel="EN"  limehd:keyWidth="10%p" />
-        <Key limehd:codes="44" limehd:keyLabel="," limehd:keyWidth="10%p" />
+        <Key limehd:codes="-2" limehd:isModifier="true" limehd:keyLabel="EN" limehd:keyWidth="10%p" />
+        <Key limehd:codes="44" limehd:keyLabel="," limehd:keyWidth="10%p"/>
         <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_keyboard_space_light"
-
-        	 limehd:keyWidth="30%p" limehd:isRepeatable="true"/>
-        <Key limehd:codes="46" limehd:keyLabel="." 
-        						 limehd:popupKeyboard="@xml/popup_punctuation" 
-        						limehd:keyWidth="10%p"/>
+        	limehd:iconPreview="@drawable/sym_keyboard_feedback_space"
+        	limehd:keyWidth="30%p"
+                limehd:isRepeatable="true"/>
+        <Key limehd:codes="8230" limehd:keyLabel="…" limehd:keyWidth="10%p" />
         <Key limehd:codes="-10" limehd:isModifier="true" limehd:keyLabel="中"  limehd:keyWidth="10%p" />
         <Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return_light" limehd:isModifier="true"
-                limehd:keyWidth="15%p" limehd:keyEdgeFlags="right"
-                />
+                limehd:keyWidth="15%p" limehd:keyEdgeFlags="right" />
     </Row>
 </Keyboard>
