--- a/LimeStudio/app/src/main/res/xml/symbols3.xml
+++ b/LimeStudio/app/src/main/res/xml/symbols3.xml
@@ -45,42 +45,42 @@
     </Row-->
 
     <Row>
-        <Key limehd:codes="156" limehd:keyLabel="œ" limehd:keyEdgeFlags="left"/>
-        <Key limehd:codes="162" limehd:keyLabel="¢"/>
-        <Key limehd:codes="164" limehd:keyLabel="¤"/>
-        <Key limehd:codes="172" limehd:keyLabel="¬"/>
-        <Key limehd:codes="185" limehd:keyLabel="¹"/>
-        <Key limehd:codes="186" limehd:keyLabel="º"/>
-        <Key limehd:codes="230" limehd:keyLabel="æ"/>
-        <Key limehd:codes="170" limehd:keyLabel="ª"/>
-        <Key limehd:codes="223" limehd:keyLabel="ß"/>
-        <Key limehd:codes="182" limehd:keyLabel="¶" limehd:keyEdgeFlags="right"/>
+        <Key limehd:keyLabel="【" limehd:keyEdgeFlags="left" />
+        <Key limehd:keyLabel="〈" />
+        <Key limehd:keyLabel="『" />
+        <Key limehd:keyLabel="「" />
+        <Key limehd:keyLabel="？" />
+        <Key limehd:keyLabel="：" />
+        <Key limehd:keyLabel="．" />
+        <Key limehd:keyLabel="◎" />
+        <Key limehd:keyLabel="＠" />
+        <Key limehd:keyLabel="☑" limehd:keyEdgeFlags="right"/>
     </Row>
     
     <Row>
-        <Key limehd:codes="247" limehd:keyLabel="÷" limehd:keyEdgeFlags="left"/>
-        <Key limehd:codes="215" limehd:keyLabel="×"/>
-        <Key limehd:codes="188" limehd:keyLabel="¼"/>
-        <Key limehd:codes="189" limehd:keyLabel="½"/>
-        <Key limehd:codes="190" limehd:keyLabel="¾"/>
-        <Key limehd:codes="178" limehd:keyLabel="²"/>
-        <Key limehd:codes="179" limehd:keyLabel="³"/>
-        <Key limehd:codes="181" limehd:keyLabel="µ"/>
-        <Key limehd:codes="171" limehd:keyLabel="«"/>
-        <Key limehd:codes="187" limehd:keyLabel="»" limehd:keyEdgeFlags="right"/>
+        <Key limehd:keyLabel="】" limehd:keyEdgeFlags="left" />
+        <Key limehd:keyLabel="〉" />
+        <Key limehd:keyLabel="』" />
+        <Key limehd:keyLabel="」" />
+        <Key limehd:keyLabel="！" />
+        <Key limehd:keyLabel="；" />
+        <Key limehd:keyLabel="、" />
+        <Key limehd:keyLabel="☒"/>
+        <Key limehd:keyLabel="　" />
+        <Key limehd:keyLabel="✔" limehd:keyEdgeFlags="right" />
     </Row>
     
     <Row>
         <Key limehd:codes="-15" limehd:keyLabel="3/3"
                 limehd:keyWidth="15%p" limehd:isModifier="true"
                 limehd:keyEdgeFlags="left"/>
-        <Key limehd:codes="161" limehd:keyLabel="¡" />
-        <Key limehd:codes="60" limehd:keyLabel="&lt;"/>
-        <Key limehd:codes="62" limehd:keyLabel="&gt;"/>
-        <Key limehd:codes="162" limehd:keyLabel="¢"/>
-        <Key limehd:codes="124" limehd:keyLabel="|"/>
-        <Key limehd:codes="92" limehd:keyLabel="\\" />
-        <Key limehd:codes="191" limehd:keyLabel="¿"/>
+        <Key limehd:keyLabel="○" />
+        <Key limehd:keyLabel="●"/>
+        <Key limehd:keyLabel="➤"/>
+        <Key limehd:keyLabel="█"/>
+        <Key limehd:keyLabel="≠"/>
+        <Key limehd:keyLabel="≒" />
+        <Key limehd:keyLabel="㊣"/>
         <Key limehd:codes="-5" limehd:keyIcon="@drawable/sym_keyboard_delete_light" limehd:isModifier="true"
                 limehd:keyWidth="15%p" limehd:keyEdgeFlags="right"
                 limehd:isRepeatable="true"/>
@@ -90,12 +90,12 @@
         <Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done_light" limehd:isModifier="true"
                 limehd:keyWidth="15%p" limehd:keyEdgeFlags="left" />
         <Key limehd:codes="-2" limehd:isModifier="true" limehd:keyLabel="EN" limehd:keyWidth="10%p" />
-        <Key limehd:codes="44" limehd:keyLabel="," limehd:keyWidth="10%p"/>
+        <Key limehd:keyLabel="，" limehd:keyWidth="10%p"/>
         <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_keyboard_space_light"
         	limehd:iconPreview="@drawable/sym_keyboard_feedback_space"
         	limehd:keyWidth="30%p"
                 limehd:isRepeatable="true"/>
-        <Key limehd:codes="8230" limehd:keyLabel="…" limehd:keyWidth="10%p" />
+        <Key  limehd:keyLabel="。" limehd:keyWidth="10%p" />
         <Key limehd:codes="-10" limehd:isModifier="true" limehd:keyLabel="中"  limehd:keyWidth="10%p" />
         <Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return_light" limehd:isModifier="true"
                 limehd:keyWidth="15%p" limehd:keyEdgeFlags="right" />
