--- a/LimeStudio/app/src/main/res/layout/dialog_ime.xml
+++ b/LimeStudio/app/src/main/res/layout/dialog_ime.xml
@@ -4,31 +4,26 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
-        android:layout_width="424dp"
+        android:layout_width="@dimen/dialog_width"
         android:layout_height="wrap_content"
         android:background="@drawable/background_outline_rect_2dp"
         android:layout_centerVertical="true"
         android:id="@+id/main"
         android:orientation="vertical"
         android:gravity="center"
-        android:paddingStart="24dp"
-        android:paddingEnd="24dp"
-        android:paddingTop="24dp"
-        android:paddingBottom="24dp">
+        android:padding="@dimen/dialog_padding">
 
         <TextView android:id="@+id/text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
             android:gravity="center"
-            android:textSize="20sp"
-            android:textColor="@android:color/black"
+            android:textAppearance="@style/Body1"
             android:text="@string/imeInstallation"/>
 
         <Button android:id="@+id/close"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="@dimen/dialog_padding"
             android:text="@string/close"
             android:visibility="gone"/>
 
