--- a/LimeStudio/app/src/main/res/values/ime_path.xml
+++ b/LimeStudio/app/src/main/res/values/ime_path.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+
+<resources xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="MissingTranslation">
     <string-array name="ime_code">
         <item>phonetic</item>    <!-- 注音 -->
         <item>cj</item>          <!-- 倉頡 -->
