--- a/LimeStudio/app/src/main/res/values/styles.xml
+++ b/LimeStudio/app/src/main/res/values/styles.xml
@@ -506,13 +506,16 @@
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
-    <style name="AppCompatDialog" parent="Theme.AppCompat.Dialog">
+    <style name="MooDialog" parent="@android:style/Theme.Dialog">
         <item name="android:windowFrame">@null</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowNoTitle">true</item>
-        <item name="android:background">@android:color/transparent</item>
         <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:textColor">@android:color/black</item>
         <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:textSize">44sp</item>
+        <item name="android:listChoiceIndicatorSingle">@drawable/btn_radio_selector</item>
     </style>
 </resources>
