--- a/LimeStudio/app/src/main/res/values/dimens.xml
+++ b/LimeStudio/app/src/main/res/values/dimens.xml
@@ -36,6 +36,7 @@
     <dimen name="key_height">46dip</dimen>
     <dimen name="candidate_stripe_height">30sp</dimen>
     <dimen name="candidate_vertical_padding">10sp</dimen>
+    <dimen name="candidate_vertical_extras_padding">0sp</dimen>
     <dimen name="candidate_number_font_size">14sp</dimen>
     <dimen name="candidate_expand_button_width">42sp</dimen>
     <dimen name="candidate_font_size">28sp</dimen>
@@ -66,4 +67,5 @@
 
     <!-- WB -->
     <dimen name="wb_key_height">66dip</dimen>
+    <integer name="orbit">1</integer>
 </resources>
