feat: [mooInkC] 加入mooInkC

--- a/LimeStudio/app/src/main/res/values/values-moo.xml
+++ b/LimeStudio/app/src/main/res/values/values-moo.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="dialog_width">424dp</dimen>
     <dimen name="dialog_padding">24dp</dimen>
+    <dimen name="dialog_text_size">44sp</dimen>
 </resources>
