--- a/LimeStudio/app/src/main/res/values/styles.xml
+++ b/LimeStudio/app/src/main/res/values/styles.xml
@@ -515,7 +515,7 @@
         <item name="android:textColor">@android:color/black</item>
         <item name="android:backgroundDimEnabled">false</item>
         <item name="android:includeFontPadding">false</item>
-        <item name="android:textSize">44sp</item>
+        <item name="android:textSize">@dimen/dialog_text_size</item>
         <item name="android:listChoiceIndicatorSingle">@drawable/btn_radio_selector</item>
     </style>
 </resources>
