--- a/LimeStudio/app/src/main/res/drawable/btn_close_readmoo.xml
+++ b/LimeStudio/app/src/main/res/drawable/btn_close_readmoo.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ /*
   ~  *
@@ -22,14 +23,6 @@
   ~  *
   ~  */
   -->
-
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item android:state_pressed="false"
-        android:drawable="@color/color_white" />
-
-    <item android:state_pressed="true"
-        android:drawable="@drawable/btn_keyboard_key_pressed_2" />
-
-
+    <item android:state_focused="false" android:drawable="@drawable/mo_close"/>
 </selector>
