--- a/LimeStudio/app/src/main/res/layout/candidatepopup.xml
+++ b/LimeStudio/app/src/main/res/layout/candidatepopup.xml
@@ -30,30 +30,35 @@
   	android:orientation="vertical"
   	android:layout_width="match_parent"
   	android:layout_height="wrap_content"
-	android:background="@color/third_background_light">
+	android:background="@color/color_black">
+	<View android:layout_width="match_parent"
+		android:layout_height="1dp"
+		android:background="@android:color/black" />
+	 <ScrollView
+		android:id="@+id/sv"
+		android:layout_width="fill_parent"
+		android:layout_height="@dimen/candidatepopup_scrollview_height"
+		>
+		<view xmlns:android="http://schemas.android.com/apk/res/android"
+				class="net.toload.main.hd.candidate.CandidateExpandedView"
+				android:id="@+id/candidatePopup"
+				android:layout_width="wrap_content"
+				android:layout_height="@dimen/candidatepopup_scrollview_height" />
 
- <ScrollView 
-	android:id="@+id/sv"
-	android:layout_width="fill_parent"
-	android:layout_height="@dimen/candidatepopup_scrollview_height"
-	>
-    <view xmlns:android="http://schemas.android.com/apk/res/android"
-		    class="net.toload.main.hd.candidate.CandidateExpandedView"
-	        android:id="@+id/candidatePopup"
-	        android:layout_width="wrap_content"
-	        android:layout_height="@dimen/candidatepopup_scrollview_height"
-			/>
-
-</ScrollView>
-
-<ImageButton android:id="@+id/closeButton"
-		android:background="@android:color/transparent"
-		android:contentDescription="@string/close_cand"
-		android:src="@drawable/btn_close"
-		android:layout_width="wrap_content"
-		android:layout_height="fill_parent"
-		android:layout_marginLeft="8dp"
-		android:layout_marginStart="8dp"
-		android:clickable="true" 
-		android:layout_gravity="bottom|end"/>
+	</ScrollView>
+	<View android:layout_width="match_parent"
+		android:layout_height="1dp"
+		android:background="@android:color/black" />
+	<ImageButton android:id="@+id/closeButton"
+			android:background="@android:color/black"
+			android:contentDescription="@string/close_cand"
+			android:src="@drawable/btn_close"
+			android:layout_width="wrap_content"
+			android:layout_height="fill_parent"
+			android:layout_marginTop="18dp"
+			android:layout_marginBottom="18dp"
+			android:layout_marginLeft="8dp"
+			android:layout_marginStart="8dp"
+			android:clickable="true"
+			android:layout_gravity="bottom|end"/>
 </LinearLayout>
