--- a/LimeStudio/app/src/main/res/layout/inputcandidate.xml
+++ b/LimeStudio/app/src/main/res/layout/inputcandidate.xml
@@ -27,13 +27,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/candidates_container"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" 
-        android:background="@color/color_white">
+        android:paddingTop="1dp"
+        android:orientation="horizontal">
        
 
         <net.toload.main.hd.candidate.CandidateView
@@ -50,8 +51,9 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:clickable="true"
-            android:orientation="horizontal" 
-            android:background="@color/color_white">
+            android:orientation="horizontal"
+            android:layout_gravity="bottom"
+            >
             
             <ImageButton
                 android:id="@+id/candidate_right"
