feat: modified main keyboard from dim effect to dot pattern and add border at popup keyboard design: https://app.zeplin.io/project/609e029ed6deb410dcf101fe/screen/619e019ff08fed144005c118

--- a/LimeStudio/app/src/main/res/drawable/keyboard_popup_panel_background_light.xml
+++ b/LimeStudio/app/src/main/res/drawable/keyboard_popup_panel_background_light.xml
@@ -38,6 +38,9 @@
         android:bottom="1dp"
         />
 
-
+    <stroke
+        android:width="6dp"
+        android:color="@color/color_black"
+        />
 
 </shape>
